# py-research

./: .gitignore  README.md  plotting.py  pyproject.toml  readfiles.py  setup.py  whiskit_import.py
py_modules/: classification.py  plotting.py
py_research/: __init__.py  classification.py  pca.py  signal_processing.py  test.py
py_templates/: py-script_template.py
pyresearch/: classification.py
src/: classification.py  directories.py  plotting.py  setup.py  stats_misc.py
