[project]
name = "py-research"
version = "0.0.1"
authors = [
  { name="Nadina (Zweifel) Oates", email="nadinaoates@gmail.com" },
]
description = "Research modules with functions for data import, plotting, signal processing, etc."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/trashpirate/py-research.git"
"Bug Tracker" = "https://github.com/trashpirate/py-research.git/issues"